--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 
-# Copy this file to .env and fill in your key
+# Copy this file to .env.local and fill in your key
 API_KEY=your_gemini_api_key_here
